Added a Student login page and admin login page

--- a/index.html
+++ b/index.html
@@ -6,39 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 3000</title>
     <link rel="stylesheet" href="./Frontend/index.css" />
-    <link rel="shortcut icon" href="./Frontend/assets/Project 3000-1.png" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="./Frontend/assets/Project 3000-1.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div id="main--header">
-        <img src="./Frontend/assets/Project 3000-1.png" alt="">
+      <a href="#">
+        <img src="./Frontend/assets/Project 3000-1(Full).png" alt="" />
+      </a>
       <h1>Project 3000</h1>
-
     </div>
 
     <!-- Buttons for student and Admin -->
     <button class="btn student-btn">
-        <a href="student-signup.html">Student Signup</a>
+      <a href="studentLogin.html">Student Signup</a>
     </button>
     <button class="btn admin-btn">
-        <a href="admin-login.html">Admin Login</a>
+      <a href="adminLogin.html">Admin Login</a>
     </button>
-    
 
     <!-- Login -->
-    <div class="login">
-      <form id="login-form" onsubmit="">
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required />
-        <br />
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required />
-        <br />
-        <button type="submit">Login</button>
-      </form>
-    </div>
-
-
-
+   
 
     <script src="./Frontend/script.js" defer></script>
   </body>
