Made some changes

--- a/studentLogin.html
+++ b/studentLogin.html
@@ -22,7 +22,7 @@
 
     <!-- Buttons for student and Admin -->
     <button class="btn student-btn">
-      <a href="studentLogin.html">Student Signup</a>
+      <a href="studentLogin.html">Signup/Login</a>
     </button>
     <button class="btn admin-btn">
       <a href="adminLogin.html">Admin Login</a>
