--- a/adminLogin.html
+++ b/adminLogin.html
@@ -22,10 +22,10 @@
 
     <!-- Buttons for student and Admin -->
     <button class="btn student-btn">
-      <a href="studentLogin.html">Student Signup</a>
+      <a href="studentLogin.html" class="Student-color">Student Signup</a>
     </button>
     <button class="btn admin-btn">
-      <a href="adminLogin.html">Admin Login</a>
+      <a href="adminLogin.html" class="Admin-color">Admin Login</a>
     </button>
 
     <!-- Login -->
