--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       <a href="adminLogin.html">Admin Login</a>
     </button>
 
-    <!-- Login -->
-   
+    <div class="main-map" style="width: 1200px; height: auto;">
+      <img src="./Frontend/assets/Montclair Map.png" alt="Map Image" style="width: 100%; height: 100%;">
+    </div>
 
     <script src="./Frontend/script.js" defer></script>
   </body>
