Fixed burger menu and some text

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <!-- Book Link -->
               <li class="menu__list">
                 <a href="#features" class="menu__link" onclick="closeMenu()"
-                  >Books</a
+                  >Montclair Map</a
                 >
               </li>
               <!-- End of Book link -->
@@ -393,7 +393,7 @@
           <div class="row footer">
             <h2>Explore more <span class="color"></span></h2>
             <a href="#features">
-              <button class="btn">Map of Montclair</button>
+              <button class="btn">Montclair Map</button>
             </a>
           </div>
         </div>
@@ -416,10 +416,10 @@
           <div class="footer__list">
             <a href="#" class="footer__link">Home</a>
             <a href="#footer" class="footer__link no-cursor">About</a>
-            <a href="#features" class="footer__link">Books</a>
+            <a href="#features" class="footer__link">Montclair Map</a>
             <a href="#footer" class="footer__link no-cursor">Contact</a>
           </div>
-          <div class="footer__copyright">Copyright &copy; 2022 Library</div>
+          <div class="footer__copyright">&copy; 2023 Fledtrain</div>
         </div>
       </div>
     </section>
