Added Montclair Map and changing names of classes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               Get to class on time bitch <span class="color">Click below</span>
             </h2>
             <a href="#features" class="red">
-              <button class="btn ">Locate Bus</button>
+              <button class="btn">Locate Bus</button>
             </a>
           </div>
           <figure class="header__image--wrapper">
@@ -102,24 +102,20 @@
         <div class="container">
           <div class="row">
             <h2 class="section__title">Map of <span>Montclair</span></h2>
-            <div class="books">
+            <div class="maps">
               <!-- Book 1 -->
               <div class="book">
                 <figure class="book__img--wrapper">
+                  <!-- Add image map of montclair -->
                   <img
-                    class="book__img"
-                    src="./assets/crack the coding interview.png"
+                    src="/Frontend/assets/Montclair Map.png"
                     alt=""
+                    usemap="#image-map"
                   />
+                </div>
                 </figure>
                 <div class="book__title">Cracking the Coding Interview</div>
                 <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
                 <div class="book__price">
                   <span class="book__price--normal">$49.95</span> $9.95
                 </div>
@@ -380,7 +376,8 @@
                 </div>
                 <h3 class="highlight__subtitle">Shuttle</h3>
                 <p class="highlight__para">
-                  World Class Shuttle from the CarParc diem to the Outskirts of MSU
+                  World Class Shuttle from the CarParc diem to the Outskirts of
+                  MSU
                 </p>
               </div>
             </div>
