--- a/index.html
+++ b/index.html
@@ -123,159 +123,8 @@
       </section>
       <!-- End of featured Section -->
 
-      <!-- Latest Sections -->
-      <section id="recents">
-        <div class="container">
-          <div class="row">
-            <h2 class="section__title">Map of <span>Montclair</span></h2>
-            <div class="books">
-              <!-- Book 1 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="assets/book-1.jpeg" alt="" />
-                </figure>
 
-                <div id="bus"></div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 1 -->
-              <!-- Book 2 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="assets/book-2.jpeg" alt="" />
-                </figure>
-                <div class="book__title">Be Obsessed Or Be Average</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 2 -->
-              <!-- Book 3 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="assets/book-3.jpeg" alt="" />
-                </figure>
-                <div class="book__title">Rich Dad Poor Dad</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 3 -->
-              <!-- Book 4 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="./assets/book-4.jpeg" alt="" />
-                </figure>
-                <div class="book__title">CashFlow Quadrant</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 4 -->
-              <!-- Book 5 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="./assets/book-5.jpeg" alt="" />
-                </figure>
-                <div class="book__title">Power</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 5 -->
-              <!-- Book 6 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="./assets/book-6.jpeg" alt="" />
-                </figure>
-                <div class="book__title">The 5 Second Rule</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 6 -->
-              <!-- Book 7 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="./assets/book-7.jpg" alt="" />
-                </figure>
-                <div class="book__title">Your Next Five Moves</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 7 -->
-              <!-- Book 8 -->
-              <div class="book">
-                <figure class="book__img--wrapper">
-                  <img class="book__img" src="./assets/book-8.jpeg" alt="" />
-                </figure>
-                <div class="book__title">Mastery</div>
-                <div class="book__ratings">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star-half-alt"></i>
-                </div>
-                <div class="book__price">
-                  <span class="book__price--normal">$59.95</span> $14.95
-                </div>
-              </div>
-              <!-- End of Book 8 -->
-            </div>
-            <!-- End of Books -->
-          </div>
-          <!-- End of Row  -->
-        </div>
-        <!-- End of container -->
-      </section>
-      <!-- End of Latest Section -->
-
+      <!-- Highlights Section Why you should choose Project 3000 -->
       <section id="highlights">
         <div class="container">
           <div class="row">
