Slight color change

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <!-- End of featured Section -->
 
 
-      <!-- Highlights Section Why you should choose Project 3000 -->
+      <!-- Highlights Section Why you should choose Project -->
       <section id="highlights">
         <div class="container">
           <div class="row">
