Changed to status

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li>
               <a href="#features" class="nav__link nav__link--primary"
-                >Announcements</a
+                >Status</a
               >
             </li>
           </ul>
@@ -170,7 +170,7 @@
         </div>
       </section>
 
-      <!-- Announcements -->
+      <!-- Status -->
       <section id="highlights">
         <div class="container">
           <div class="row">
