--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           <ul class="nav__links">
             <li>
               <a href="./studentLogin.html" class="nav__link"
-                >User Login/Signup</a
+                >Login</a
               >
             </li>
             <li>
-              <a href="./adminLogin.html" class="nav__link">Admin Login</a>
+              <a href="./adminLogin.html" class="nav__link">Signup</a>
             </li>
             <li>
               <a href="#features" class="nav__link nav__link--primary"
@@ -78,6 +78,11 @@
                 <a href="#" class="menu__link" onclick="closeMenu()">Contact</a>
               </li>
               <!-- End of contact link -->
+              <!-- Status Link -->
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Status</a>
+              </li>
+              <!-- End of Status link -->
             </ul>
           </div>
           <!-- End of Burger Menu -->
