Got rid of btn for navigating

--- a/index.html
+++ b/index.html
@@ -94,11 +94,8 @@
           <div class="header__description">
             <h1 class="text-red">The Greatest Montclair Shuttle System</h1>
             <h2>
-              Get to class on time <span class="color">Click below</span>
+              Get to class on time!
             </h2>
-            <a href="#features" class="red">
-              <button class="btn">Locate Bus</button>
-            </a>
           </div>
           <figure class="header__image--wrapper">
             <img src="./assets/Undraw_Books.svg" alt="" />
