Fixed top left logo

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </h2>
           </div>
           <figure class="header__image--wrapper">
-            <img src="./assets/Undraw_Books.svg" alt="" />
+            <img src="./Frontend/assets/Montclair Map.png" alt="" />
           </figure>
         </div>
       </header>
