Deleted not used asets

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#">
             <img
               class="logo"
-              src="./Frontend/assets/Project 3000-1(Full).png"
+              src="./Frontend/assets/Project 3000-1 no bus roof.png"
               alt=""
             />
           </a>
@@ -191,7 +191,7 @@
           <a href="#">
             <figure class="footer__logo">
               <img
-                src="./Frontend/assets/Project 3000-1(Full).png"
+                src="./Frontend/assets/Project 3000-1 no bus roof.png"
                 class="footer__logo--img"
                 alt=""
               />
