Changed the height

--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
             <h1 class="text-red">The Greatest Montclair Shuttle System</h1>
             <h2>Get to class on time!</h2>
           </div>
-          <figure class="header__image--wrapper">
-            <img src="./Frontend/assets/Montclair Map.png" alt="" />
-          </figure>
         </div>
       </header>
     </section>
@@ -109,7 +106,7 @@
             <div class="maps">
               <!-- Montclair Map -->
               <div class="map">
-                <figure class="book__img--wrapper">
+                <figure class="map__img--wrapper">
                   <!-- Add image map of montclair -->
                   <img src="/Frontend/assets/Montclair Map.png" alt="" />
                 </figure>
