Changed map name

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="map">
                 <figure class="map__img--wrapper">
                   <!-- Add image map of montclair -->
-                  <img src="/Frontend/assets/Montclair Map.png" alt="" />
+                  <img src="/Frontend/assets/MontclairMap.png" alt="" />
                 </figure>
                 <!-- End of Montclair  Map -->
               </div>
