--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Joey's Library</title>
+    <title>Project 3000</title>
     <link rel="stylesheet" href="./Frontend/index.css" />
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
