Added Status Section and map

--- a/index.html
+++ b/index.html
@@ -57,25 +57,26 @@
               <i class="fas fa-times"></i>
             </button>
             <ul class="menu__links">
-              <!-- Home link -->
-              <li class="menu__list">
-                <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
-              </li>
-              <!-- End Home link -->
-
-              <!-- Book Link -->
+              <!-- Map Link -->
               <li class="menu__list">
                 <a href="#features" class="menu__link" onclick="closeMenu()"
-                  >Montclair Map</a
+                  >Map</a
                 >
               </li>
-              <!-- End of Book link -->
+              <!-- End of Map link -->
 
-              <!-- Contact Link -->
+              <!-- Login -->
               <li class="menu__list">
-                <a href="#" class="menu__link" onclick="closeMenu()">Contact</a>
+                <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
               </li>
-              <!-- End of contact link -->
+              <!-- End of Login link -->
+
+              <!-- Signup -->
+              <li class="menu__list">
+                <a href="#" class="menu__link" onclick="closeMenu()">Signup</a>
+              </li>
+              <!-- End of Signup link -->
+
               <!-- Status Link -->
               <li class="menu__list">
                 <a href="#" class="menu__link" onclick="closeMenu()">Status</a>
@@ -159,7 +160,7 @@
       </section>
 
       <!-- Status -->
-      <section id="highlights">
+      <section id="StatusId">
         <div class="container">
           <div class="row">
             <h2 class="section__title">
