--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             </li>
             <li>
               <a href="#features" class="nav__link nav__link--primary"
-                >Shuttle Times</a
+                >Map</a
               >
             </li>
             <li>
-              <a href="#features" class="nav__link nav__link--primary"
+              <a href="#StatusId" class="nav__link nav__link--primary"
                 >Status</a
               >
             </li>
@@ -196,9 +196,8 @@
           </a>
           <div class="footer__list">
             <a href="#" class="footer__link">Home</a>
-            <a href="#footer" class="footer__link no-cursor">About</a>
             <a href="#features" class="footer__link">Montclair Map</a>
-            <a href="#footer" class="footer__link no-cursor">Contact</a>
+            <a href="#StatusId" class="footer__link no-cursor">Status</a>
           </div>
           <div class="footer__copyright">&copy; 2023 Fledtrain</div>
         </div>
