--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <!-- Montclair Map -->
               <div class="map">
                 <!-- Add image map of montclair -->
-                <img src="/Frontend/assets/MontclairMap.jpg" alt="" />
+                <img src="/Frontend/assets/MontclairMap.jpg" alt="Picture should be here" />
 
                 <!-- End of Montclair  Map -->
               </div>
