--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
       <!-- Featured Section -->
       <section id="features">
         <div class="container">
-          <div class="row">
+          <div class="row__maps">
             <h2 class="section__title">Map of <span>Montclair</span></h2>
             <div class="maps">
               <!-- Montclair Map -->
