--- a/adminView.html
+++ b/adminView.html
@@ -31,10 +31,7 @@
           </a>
           <ul class="nav__links">
             <li>
-              <a href="./studentLogin.html" class="nav__link">Login</a>
-            </li>
-            <li>
-              <a href="./adminLogin.html" class="nav__link">Signup</a>
+              <a href="#" class="nav__link">Edit</a>
             </li>
             <li>
               <a href="#features" class="nav__link nav__link--primary"
@@ -43,7 +40,17 @@
             </li>
             <li>
               <a href="#StatusId" class="nav__link nav__link--primary"
-                >Status</a
+                >View Shuttles</a
+              >
+            </li>
+            <li>
+              <a href="#StatusId" class="nav__link nav__link--primary"
+                >View Student </a
+              >
+            </li>
+            <li>
+              <a href="#" class="nav__link nav__link--primary"
+                >Admin View</a
               >
             </li>
           </ul>
