Added logo for signup/login pages

--- a/adminLogin.html
+++ b/adminLogin.html
@@ -13,10 +13,9 @@
     />
   </head>
   <body>
-
     <div id="main--header">
       <a href="./index.html">
-        <img src="./Frontend/assets/Project 3000-1(Full).png" alt="" />
+        <img class="logo" src="./Frontend/assets/Project 3000-1 no bus roof.png" alt="" />
       </a>
       <h1>Admin Login</h1>
     </div>
