--- a/adminView.html
+++ b/adminView.html
@@ -15,7 +15,7 @@
       href="./Frontend/assets/Project 3000-1(Full).png"
       type="image/x-icon"
     />
-    <script src="./Frontend/script.js"></script>
+    <script src="./Frontend/script.js" defer></script>
   </head>
 
   <body>
