--- a/studentLogin.html
+++ b/studentLogin.html
@@ -15,7 +15,7 @@
   <body>
     <div id="main--header">
       <a href="./index.html">
-        <img src="./Frontend/assets/Project 3000-1(Full).png" alt="" />
+        <img class="logo" src="./Frontend/assets/Project 3000-1 no bus roof.png" alt="" />
       </a>
       <h1>Student Login</h1>
     </div>
