Better Login Screens

--- a/studentLogin.html
+++ b/studentLogin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project 3000</title>
-    <link rel="stylesheet" href="./Frontend/index.css" />
+    <link rel="stylesheet" href="./Frontend/login.css" />
     <link
       rel="shortcut icon"
       href="./Frontend/assets/Project 3000-1.png"
@@ -13,12 +13,18 @@
     />
   </head>
   <body>
-    <div id="main--header">
-      <a href="./index.html">
-        <img class="logo" src="./Frontend/assets/Project 3000-1 no bus roof.png" alt="" />
-      </a>
-      <h1>Student Login</h1>
-    </div>
+    <header id="login_views">
+      <div id="main--header">
+        <a href="./index.html">
+          <img
+            class="logo"
+            src="./Frontend/assets/Project 3000-1 no bus roof.png"
+            alt=""
+          />
+        </a>
+        <h1>Student Login</h1>
+      </div>
+    </header>
 
     <!-- Buttons for student and Admin -->
     <button class="btn student-btn">
