--- a/adminLogin.html
+++ b/adminLogin.html
@@ -47,6 +47,29 @@
       </form>
     </div>
 
+    <!-- Footer Section -->
+    <section id="footer">
+      <div class="container">
+        <div class="row footer">
+          <a href="#">
+            <figure class="footer__logo">
+              <img
+                src="./Frontend/assets/Project 3000-1 no bus roof.png"
+                class="footer__logo--img"
+                alt=""
+              />
+            </figure>
+          </a>
+          <div class="footer__list">
+            <a href="#" class="footer__link">Home</a>
+            <a href="#features" class="footer__link">Montclair Map</a>
+            <a href="#StatusId" class="footer__link no-cursor">Status</a>
+          </div>
+          <div class="footer__copyright">&copy; 2023 Fledtrain</div>
+        </div>
+      </div>
+    </section>
+
     <script src="./Frontend/script.js" defer></script>
   </body>
 </html>
