Added meta tags

--- a/adminLogin.html
+++ b/adminLogin.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Project 3000, Montclair's Finest Shuttle Tracking System"
+    />
+    <meta name="theme-color" content="#ffc8c8" />
+    <link
+      rel="canonical"
+      href="https://fledtrain.github.io/ShuttleSystem/index.html"
+    />
     <title>Project 3000</title>
     <link rel="stylesheet" href="./Frontend/login.css" />
     <link
