--- a/adminView.html
+++ b/adminView.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 3000</title>
+    <meta
+      name="description"
+      content="Project 3000, Montclair's Finest Shuttle Tracking System"
+    />
+    <meta name="theme-color" content="#ffc8c8" />
+    <link
+      rel="canonical"
+      href="https://fledtrain.github.io/ShuttleSystem/index.html"
+    />
     <link rel="stylesheet" href="./Frontend/index.css" />
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
@@ -15,7 +23,7 @@
       href="./Frontend/assets/Project 3000-1(Full).png"
       type="image/x-icon"
     />
-    <script src="./Frontend/script.js" defer></script>
+    <title>Project 3000</title>
   </head>
 
   <body>
@@ -202,5 +210,6 @@
         </div>
       </div>
     </section>
+    <script src="./Frontend/script.js" defer></script>
   </body>
 </html>
