--- a/studentLogin.html
+++ b/studentLogin.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project 3000</title>
+    <meta
+      name="description"
+      content="Project 3000, Montclair's Finest Shuttle Tracking System"
+    />
+    <meta name="theme-color" content="#ffc8c8" />
+    <link
+      rel="canonical"
+      href="https://fledtrain.github.io/ShuttleSystem/index.html"
+    />
     <link rel="stylesheet" href="./Frontend/login.css" />
     <link
       rel="shortcut icon"
       href="./Frontend/assets/Project 3000-1.png"
       type="image/x-icon"
     />
+    <title>Project 3000</title>
   </head>
   <body>
     <header id="login_views">
