--- a/adminLogin.html
+++ b/adminLogin.html
@@ -22,6 +22,7 @@
     />
   </head>
   <body>
+    <!-- Header -->
     <header id="login_views">
       <div id="main--header">
         <a href="./index.html">
@@ -34,16 +35,20 @@
         <h1>Admin Login</h1>
       </div>
     </header>
+    <!-- End of Header -->
 
     <!-- Buttons for student and Admin -->
-    <button class="btn student-btn">
-      <a href="studentLogin.html">Signup/Login</a>
-    </button>
-    <button class="btn admin-btn">
-      <a href="adminLogin.html" class="Admin-color">Admin Login</a>
-    </button>
+    <main>
+      <button class="btn student-btn">
+        <a href="studentLogin.html">Signup/Login</a>
+      </button>
+      <button class="btn admin-btn">
+        <a href="adminLogin.html" class="Admin-color">Admin Login</a>
+      </button>
+    </main>
+    <!-- End of Buttons -->
 
-    <!-- Login -->
+    <!-- Login Form-->
     <div class="login">
       <form id="login-form" onsubmit="">
         <label for="username">Username:</label>
@@ -55,6 +60,7 @@
         <button type="submit">Login</button>
       </form>
     </div>
+    <!-- End of Login Form -->
 
     <!-- Footer Section -->
     <section id="footer">
