Fixed the favicon logo

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
     ></script>
     <link
       rel="shortcut icon"
-      href="./Frontend/assets/Project 3000-1(Full).png"
+      href="./Frontend/assets/Project 3000-1 no bus roof.png"
       type="image/x-icon"
+      sizes="16x16"
     />
     <title>Project 3000</title>
   </head>
