Fixed logo for student login and admin login

--- a/studentLogin.html
+++ b/studentLogin.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./Frontend/login.css" />
     <link
       rel="shortcut icon"
-      href="./Frontend/assets/Project 3000-1.png"
+      href="./Frontend/assets/Project 3000-1 no bus roof.png"
       type="image/x-icon"
     />
     <title>Project 3000</title>
