Changed the student login page a bit

--- a/adminLogin.html
+++ b/adminLogin.html
@@ -40,7 +40,7 @@
     <!-- Buttons for student and Admin -->
     <main>
       <button class="btn student-btn">
-        <a href="studentLogin.html">User Login</a>
+        <a href="studentLogin.html">User Login/Sign up</a>
       </button>
       <button class="btn admin-btn">
         <a href="adminLogin.html" class="Admin-color">Admin Login</a>
