--- a/studentLogin.html
+++ b/studentLogin.html
@@ -32,7 +32,7 @@
             alt=""
           />
         </a>
-        <h1>Student Login</h1>
+        <h1>User Login</h1>
       </div>
     </header>
     <!-- End of Header -->
@@ -40,7 +40,7 @@
     <!-- Buttons for student and Admin -->
     <main>
       <button class="btn student-btn">
-        <a href="studentLogin.html">User Login</a>
+        <a href="studentLogin.html">User Login/Sign up</a>
       </button>
       <button class="btn admin-btn">
         <a href="adminLogin.html" class="Admin-color">Admin Login</a>
@@ -51,7 +51,9 @@
     <!-- Login Form-->
     <div class="login">
       <form id="login-form" onsubmit="">
-        <label for="username">Username:</label>
+        <h1 class="h1-Register">Register / Login</h1>
+
+        <label for="username">Email:</label>
         <input type="text" id="username" name="username" required />
         <br />
         <label for="password">Password:</label>
@@ -59,6 +61,8 @@
         <br />
         <button type="submit">Login</button>
       </form>
+      </form>
+
     </div>
     <!-- End of Login Form -->
 
